test/tests/errors/error-procedure-env.sm
// true
// false
// false
/**/
/**/

program {
    proc a(b: int) {
        output b + x;
    }
    const x: int = 1;
    a(1);
}